Bilder zu 5.2 eingefügt

--- a/ue5.html
+++ b/ue5.html
@@ -63,6 +63,11 @@
                         <th><audio controls><source src="./Uebung5/stefan/5_2/Wer_liest_die_Zeitung.wav" type="audio/wav"></audio></th>
                     </tr>
                     <tr>
+                        <th><img src="./Uebung5/david/5_3/Wer_liest_die_Zeitung.JPG" width="400" height="200"></th>
+                        <th><img src="./Uebung5/marc/5_3/Wer_liest_die_Zeitung.png" width="400" height="200"></th>
+                        <th><img src="./Uebung5/stefan/5_3/Wer_liest_die_Zeitung.JPG" width="400" height="200"></th>
+                    </tr>
+                    <tr>
                         <th><a style="color:blue;" href="./Uebung5/david/5_3/Wer_liest_die_Zeitung.TextGrid">David Textgrid Fall 1</a></th>
                         <th><a style="color:blue;" href="./Uebung5/marc/5_3/Wer_liest_die_Zeitung.TextGrid">Marc Textgrid Fall 1</a></th>
                         <th><a style="color:blue;" href="./Uebung5/stefan/5_3/Wer_liest_die_Zeitung.TextGrid">Stefan Textgrid Fall 1</a></th>
@@ -74,6 +79,11 @@
                         <th><audio controls><source src="./Uebung5/david/5_2/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
                         <th><audio controls><source src="./Uebung5/marc/5_2/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
                         <th><audio controls><source src="./Uebung5/stefan/5_2/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
+                    </tr>
+                    <tr>
+                        <th><img src="./Uebung5/david/5_3/Was_tut_der_Mann_mit_der_Zeitung.JPG" width="400" height="200"></th>
+                        <th><img src="./Uebung5/marc/5_3/Was_tut_der_Mann_mit_der_Zeitung.png" width="400" height="200"></th>
+                        <th><img src="./Uebung5/stefan/5_3/Was_tut_der_Mann_mit_der_Zeitung.JPG" width="400" height="200"></th>
                     </tr>
                     <tr>
                         <th><a style="color:blue;" href="./Uebung5/david/5_3/Was_tut_der_Mann_mit_der_Zeitung.TextGrid">David Textgrid Fall 2</a></th>
@@ -91,6 +101,11 @@
                         <th><audio controls><source src="./Uebung5/stefan/5_2/Was_liest_der_Mann.wav" type="audio/wav"></audio></th>
                     </tr>
                     <tr>
+                        <th><img src="./Uebung5/david/5_3/Was_liest_der_Mann.JPG" width="400" height="200"></th>
+                        <th><img src="./Uebung5/marc/5_3/Was_liest_der_Mann.png" width="400" height="200"></th>
+                        <th><img src="./Uebung5/stefan/5_3/Was_liest_der_Mann.JPG" width="400" height="200"></th>
+                    </tr>
+                    <tr>
                         <th><a style="color:blue;" href="./Uebung5/david/5_3/Was_liest_der_Mann.TextGrid">David Textgrid Fall 3</a></th>
                         <th><a style="color:blue;" href="./Uebung5/marc/5_3/Was_liest_der_Mann.TextGrid">Marc Textgrid Fall 3</a></th>
                         <th><a style="color:blue;" href="./Uebung5/stefan/5_3/Was_liest_der_Mann.TextGrid">Stefan Textgrid Fall 3</a></th>
@@ -103,6 +118,11 @@
                         <th><audio controls><source src="./Uebung5/david/5_2/Was_passiert_da.wav" type="audio/wav"></audio></th>
                         <th><audio controls><source src="./Uebung5/marc/5_2/Was_passiert_da.wav" type="audio/wav"></audio></th>
                         <th><audio controls><source src="./Uebung5/stefan/5_2/Was_passiert_da.wav" type="audio/wav"></audio></th>
+                    </tr>
+                    <tr>
+                        <th><img src="./Uebung5/david/5_3/Was_passiert_da.JPG" width="400" height="200"></th>
+                        <th><img src="./Uebung5/marc/5_3/Was_passiert_da.png" width="400" height="200"></th>
+                        <th><img src="./Uebung5/stefan/5_3/Was_passiert_da.JPG" width="400" height="200"></th>
                     </tr>
                     <tr>
                         <th><a style="color:blue;" href="./Uebung5/david/5_3/Was_passiert_da.TextGrid">David Textgrid Fall 4</a></th>
