--- a/ue5.html
+++ b/ue5.html
@@ -769,12 +769,12 @@
                 </tr>
                 <tr>
                     <th><audio controls><source src="./Uebung5/david/5_5/Duration.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung5/marc/5_5/Duration.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung5/marc/5_5/Was_passiert_da.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung5/stefan/5_5/Duration.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
                     <th><img src="./Uebung5/david/5_5/Duration.JPG" width="400" height="200"></th>
-                    <th><img src="./Uebung5/marc/5_5/Duration.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_5/Was_passiert_da.png" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_5/Duration.JPG" width="400" height="200"></th>
                 </tr>
             </table>
@@ -812,7 +812,7 @@ Antworten zu den Fragen.
                 </tr>
                 <tr>
                     <th><img src="./Uebung5/david/5_6/Frage.JPG" width="400" height="200"></th>
-                    <th><img src="./Uebung5/marc/5_6/Frage.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_6/Frage.png" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_6/Frage.JPG" width="400" height="200"></th>
                 </tr>
                 <tr>
@@ -822,12 +822,12 @@ Antworten zu den Fragen.
                 </tr>
                 <tr>
                     <th><audio controls><source src="./Uebung5/david/5_6/Was_passier_da.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung5/marc/5_6/Was_passier_da.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung5/stefan/5_6/Was_passier_da.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung5/marc/5_6/Was_passiert_da.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung5/stefan/5_6/Was_passiert_da.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
                     <th><img src="./Uebung5/david/5_6/Was_passier_da.JPG" width="400" height="200"></th>
-                    <th><img src="./Uebung5/marc/5_6/Was_passier_da.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_6/Was_passiert_da.png" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_6/Was_passier_da.JPG" width="400" height="200"></th>
                 </tr>
                 <p>Die Grundfrequenz steigt zum Ende hin bei der Frage sehr stark an. Bei Aussage 4 bleibt die Grundfrequenz unten.</p>
