Bilder zu 5.4 hinzugefügt und typo

--- a/ue5.html
+++ b/ue5.html
@@ -482,7 +482,7 @@
           </tr>
           <tr>
               <th style="border: 1px solid black">liest</th>
-              <th style="border: 1px solid black">0,314s</th>
+              <th style="border: 1px solid black">314ms</th>
               <th style="border: 1px solid black">109,6Hz</th>
               <th style="border: 1px solid black">67,92dB</th>
           </tr>
@@ -717,6 +717,11 @@
                     <th><audio controls><source src="./Uebung5/stefan/5_4/Wer_liest_die_Zeitung.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
+                    <th><img src="./Uebung5/david/5_4/Wer_liest_die_Zeitung.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_4/Wer_liest_die_Zeitung.png" width="400" height="200"></th>
+                    <th><img src="./Uebung5/stefan/5_4/Wer_liest_die_Zeitung.JPG" width="400" height="200"></th>
+                </tr>
+                <tr>
                     <th>David Fall 2</th>
                     <th>Marc Fall 2</th>
                     <th>Stefan Fall 2</th>
@@ -725,6 +730,11 @@
                     <th><audio controls><source src="./Uebung5/david/5_4/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung5/marc/5_4/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung5/stefan/5_4/Was_tut_der_Mann_mit_der_Zeitung.wav" type="audio/wav"></audio></th>
+                </tr>
+                <tr>
+                    <th><img src="./Uebung5/david/5_4/Was_tut_der_Mann_mit_der_Zeitung.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_4/Was_tut_der_Mann_mit_der_Zeitung.png" width="400" height="200"></th>
+                    <th><img src="./Uebung5/stefan/5_4/Was_tut_der_Mann_mit_der_Zeitung.JPG" width="400" height="200"></th>
                 </tr>
                 <tr>
                     <th>David Fall 3</th>
@@ -737,6 +747,11 @@
                     <th><audio controls><source src="./Uebung5/stefan/5_4/Was_liest_der_Mann.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
+                    <th><img src="./Uebung5/david/5_4/Was_liest_der_Mann.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_4/Was_liest_der_Mann.png" width="400" height="200"></th>
+                    <th><img src="./Uebung5/stefan/5_4/Was_liest_der_Mann.JPG" width="400" height="200"></th>
+                </tr>
+                <tr>
                     <th>David Fall 4</th>
                     <th>Marc Fall 4</th>
                     <th>Stefan Fall 4</th>
@@ -745,6 +760,11 @@
                     <th><audio controls><source src="./Uebung5/david/5_4/Was_passiert_da.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung5/marc/5_4/Was_passiert_da.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung5/stefan/5_4/Was_passiert_da.wav" type="audio/wav"></audio></th>
+                </tr>
+                <tr>
+                    <th><img src="./Uebung5/david/5_4/Was_passiert_da.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/marc/5_4/Was_passiert_da.png" width="400" height="200"></th>
+                    <th><img src="./Uebung5/stefan/5_4/Was_passiert_da.JPG" width="400" height="200"></th>
                 </tr>
             </table>
 
