Auswertungen geschrieben, weg mit der Scheiße : )

--- a/ue5.html
+++ b/ue5.html
@@ -683,8 +683,21 @@
             </tr>
         </table>
         </div>
-        <p style="font-size:50px; color:red;">Was hat
-            der veränderte Fokus für eine Wirkung?</p>
+        <p>
+        Vor der Auswertung ist anzumerken, das Schnitt und Segmentierung der Silben per Hand vorgenommen wurde und eine
+        präzise Analyse daher nicht möglich ist. Zudem hängt die mittlere Intensität und zu Teilen auch die Grundfrequenz
+        der Silben stark von deren Einteilung ab. Wir haben dennoch unser bestes versucht eine konsistente Segmentierung
+        und Schnitt zu realisieren.
+        <br>
+        Der Fokus spiegelt sich in den drei Eigenschaften Dauer, Grundfrequenz und Intensität der jeweiligen
+        Wörter wieder. So ist gut erkennbar, wie in Fall 1 die Silbe Mann betont wird
+        und somit lauter und länger gesprochen wird. Dieses Muster zieht sich ebenfalls
+        durch die anderen Fälle wobei anzumerken ist, das im Fall 4 sich die Betonung auf
+        die Silbe "Zei" fokussiert.
+        <br>
+        auf die Grundfrequenz hat der Fokus ebenfalls Einfluss, so tendieren betonte Wörter dazu auch eine
+        höhere Grundfrequenz zu haben.
+        </p>
         </section>
     </article>
     <article>
@@ -768,7 +781,11 @@
                 </tr>
             </table>
 
-            <p>Die ursprünglichen Bedeutungen sind geblieben</p>
+            <p>
+              Die ursprünglichen Bedeutungen sind erhalten geblieben, da, wie in 5.3 besprochen, der Fokus
+              nicht nur die Grundfrequenz, sondern auch Intensität und Silbenlänge geändert hat. Dieser Unterschied
+              ist stets in den monotonen Versionen hörbar.
+            </p>
         </section>
 
     </article>
@@ -798,7 +815,11 @@
                     <th><img src="./Uebung5/stefan/5_5/Duration.JPG" width="400" height="200"></th>
                 </tr>
             </table>
-            <p>Durch das einfügen von perioden zur verlangsamung des Signals, entsteht der Phazing-Effekt</p>
+            <p>
+              Da unsere Aufnahme nicht einfach lang gestreckt wird, sondern die Grundfrequenzen erhalten bleiben sollen
+              müssen Perioden zur Verlangsamung des Signals eingefügt werden. Dies führt jedoch dazu, das sich die Stimme
+              gezogen anhören. Man nennt dies den Phazing-Effekt
+            </p>
         </section>
 
     </article>
@@ -850,7 +871,14 @@ Antworten zu den Fragen.
                     <th><img src="./Uebung5/marc/5_6/Was_passiert_da.png" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_6/Was_passier_da.JPG" width="400" height="200"></th>
                 </tr>
-                <p>Die Grundfrequenz steigt zum Ende hin bei der Frage sehr stark an. Bei Aussage 4 bleibt die Grundfrequenz unten.</p>
+                <p>
+                  Bei der Frage steigt die Grundfrequenz der Silbe "tung" sehr stark an (zb. bei Marc von ca 100Hz auf ca. 200Hz).
+                  Bei Aussage 4 bleibt die Grundfrequenz ungefähr gleich. Wir können also durch erhöhen der Grundfrequenz den Fokus
+                  aus Fall 4 manipulieren. Dies klappt jedoch mehr oder weniger gut. Bei Davids Replikation ist der geänderte
+                  Fokus klar hörbar, wohingegen bei Marcs Replikation trotz erhöhen der Grundfrequenz der Fokus nicht heraushörbar ist.
+                  In diesem Fall lag es daran, das in Fall 4 von Marc die letzte Silbe aufgrund des Fokus anders als bei einer Frage ausgesprochen wurde.
+                  Da wir nur die Grundfrequenz ändern wollen, ist eine gute Replikation in diesem Fall also nicht möglich.
+                </p>
             </table>
         </section>
 
