--- a/ue5.html
+++ b/ue5.html
@@ -188,39 +188,39 @@
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">Der</th>
-                            <th style="border: 1px solid black">229ms</th>
-                            <th style="border: 1px solid black">102Hz</th>
-                            <th style="border: 1px solid black">70,78dB</th>
+                            <th style="border: 1px solid black">229</th>
+                            <th style="border: 1px solid black">102</th>
+                            <th style="border: 1px solid black">70,78</th>
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">Mann</th>
-                            <th style="border: 1px solid black">266ms</th>
-                            <th style="border: 1px solid black">112,9Hz</th>
-                            <th style="border: 1px solid black">71,88dB</th>
+                            <th style="border: 1px solid black">266</th>
+                            <th style="border: 1px solid black">112,9</th>
+                            <th style="border: 1px solid black">71,88</th>
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">liest</th>
-                            <th style="border: 1px solid black">325ms</th>
-                            <th style="border: 1px solid black">98,84Hz</th>
-                            <th style="border: 1px solid black">63,2dB</th>
+                            <th style="border: 1px solid black">325</th>
+                            <th style="border: 1px solid black">98,84</th>
+                            <th style="border: 1px solid black">63,2</th>
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">die</th>
-                            <th style="border: 1px solid black">143ms</th>
-                            <th style="border: 1px solid black">99,78Hz</th>
-                            <th style="border: 1px solid black">64,8dB</th>
+                            <th style="border: 1px solid black">143</th>
+                            <th style="border: 1px solid black">99,78</th>
+                            <th style="border: 1px solid black">64,8</th>
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">Zei</th>
-                            <th style="border: 1px solid black">341ms</th>
-                            <th style="border: 1px solid black">103,4Hz</th>
-                            <th style="border: 1px solid black">66,97dB</th>
+                            <th style="border: 1px solid black">341</th>
+                            <th style="border: 1px solid black">103,4</th>
+                            <th style="border: 1px solid black">66,97</th>
                         </tr>
                         <tr>
                             <th style="border: 1px solid black">tung</th>
-                            <th style="border: 1px solid black">421ms</th>
-                            <th style="border: 1px solid black">106,9Hz</th>
-                            <th style="border: 1px solid black">60,05dB</th>
+                            <th style="border: 1px solid black">421</th>
+                            <th style="border: 1px solid black">106,9</th>
+                            <th style="border: 1px solid black">60,05</th>
                         </tr>
                     </table>
                     <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
@@ -322,39 +322,39 @@
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Der</th>
-                        <th style="border: 1px solid black">203ms</th>
-                        <th style="border: 1px solid black">105,2Hz</th>
-                        <th style="border: 1px solid black">75,16dB</th>
+                        <th style="border: 1px solid black">203</th>
+                        <th style="border: 1px solid black">105,2</th>
+                        <th style="border: 1px solid black">75,16</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Mann</th>
-                        <th style="border: 1px solid black">218ms</th>
-                        <th style="border: 1px solid black">106,1Hz</th>
-                        <th style="border: 1px solid black">73,36dB</th>
+                        <th style="border: 1px solid black">218</th>
+                        <th style="border: 1px solid black">106,1</th>
+                        <th style="border: 1px solid black">73,36</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">liest</th>
-                        <th style="border: 1px solid black">411ms</th>
-                        <th style="border: 1px solid black">116,9Hz</th>
-                        <th style="border: 1px solid black">68,98dB</th>
+                        <th style="border: 1px solid black">411</th>
+                        <th style="border: 1px solid black">116,9</th>
+                        <th style="border: 1px solid black">68,98</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">die</th>
-                        <th style="border: 1px solid black">137ms</th>
-                        <th style="border: 1px solid black">101,5Hz</th>
-                        <th style="border: 1px solid black">63,01dB</th>
+                        <th style="border: 1px solid black">137</th>
+                        <th style="border: 1px solid black">101,5</th>
+                        <th style="border: 1px solid black">63,01</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Zei</th>
-                        <th style="border: 1px solid black">299ms</th>
-                        <th style="border: 1px solid black">100,5Hz</th>
-                        <th style="border: 1px solid black">68,7dB</th>
+                        <th style="border: 1px solid black">299</th>
+                        <th style="border: 1px solid black">100,5</th>
+                        <th style="border: 1px solid black">68,7</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">tung</th>
-                        <th style="border: 1px solid black">345ms</th>
-                        <th style="border: 1px solid black">113,1Hz</th>
-                        <th style="border: 1px solid black">57dB</th>
+                        <th style="border: 1px solid black">345</th>
+                        <th style="border: 1px solid black">113,1</th>
+                        <th style="border: 1px solid black">57</th>
                     </tr>
                 </table>
                 <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
@@ -456,39 +456,39 @@
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Der</th>
-                        <th style="border: 1px solid black">207ms</th>
-                        <th style="border: 1px solid black">104,4Hz</th>
-                        <th style="border: 1px solid black">75,45dB</th>
+                        <th style="border: 1px solid black">207</th>
+                        <th style="border: 1px solid black">104,4</th>
+                        <th style="border: 1px solid black">75,45</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Mann</th>
-                        <th style="border: 1px solid black">199ms</th>
-                        <th style="border: 1px solid black">109,6Hz</th>
-                        <th style="border: 1px solid black">74,05dB</th>
+                        <th style="border: 1px solid black">199</th>
+                        <th style="border: 1px solid black">109,6</th>
+                        <th style="border: 1px solid black">74,05</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">liest</th>
-                        <th style="border: 1px solid black">314ms</th>
-                        <th style="border: 1px solid black">109,6Hz</th>
-                        <th style="border: 1px solid black">67,92dB</th>
+                        <th style="border: 1px solid black">314</th>
+                        <th style="border: 1px solid black">109,6</th>
+                        <th style="border: 1px solid black">67,92</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">die</th>
-                        <th style="border: 1px solid black">147ms</th>
-                        <th style="border: 1px solid black">106,6Hz</th>
-                        <th style="border: 1px solid black">63,68dB</th>
+                        <th style="border: 1px solid black">147</th>
+                        <th style="border: 1px solid black">106,6</th>
+                        <th style="border: 1px solid black">63,68</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Zei</th>
-                        <th style="border: 1px solid black">339ms</th>
-                        <th style="border: 1px solid black">118,8Hz</th>
-                        <th style="border: 1px solid black">74,54dB</th>
+                        <th style="border: 1px solid black">339</th>
+                        <th style="border: 1px solid black">118,8</th>
+                        <th style="border: 1px solid black">74,54</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">tung</th>
-                        <th style="border: 1px solid black">311ms</th>
-                        <th style="border: 1px solid black">101,3Hz</th>
-                        <th style="border: 1px solid black">61,22dB</th>
+                        <th style="border: 1px solid black">311</th>
+                        <th style="border: 1px solid black">101,3</th>
+                        <th style="border: 1px solid black">61,22</th>
                     </tr>
                 </table>
                 <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
@@ -590,39 +590,39 @@
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Der</th>
-                        <th style="border: 1px solid black">183ms</th>
-                        <th style="border: 1px solid black">104,5Hz</th>
-                        <th style="border: 1px solid black">73,9dB</th>
+                        <th style="border: 1px solid black">183</th>
+                        <th style="border: 1px solid black">104,5</th>
+                        <th style="border: 1px solid black">73,9</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Mann</th>
-                        <th style="border: 1px solid black">188ms</th>
-                        <th style="border: 1px solid black">121,6Hz</th>
-                        <th style="border: 1px solid black">74,47dB</th>
+                        <th style="border: 1px solid black">188</th>
+                        <th style="border: 1px solid black">121,6</th>
+                        <th style="border: 1px solid black">74,47</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">liest</th>
-                        <th style="border: 1px solid black">263ms</th>
-                        <th style="border: 1px solid black">120,3Hz</th>
-                        <th style="border: 1px solid black">66,22dB</th>
+                        <th style="border: 1px solid black">263</th>
+                        <th style="border: 1px solid black">120,3</th>
+                        <th style="border: 1px solid black">66,22</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">die</th>
-                        <th style="border: 1px solid black">115ms</th>
-                        <th style="border: 1px solid black">117,2Hz</th>
-                        <th style="border: 1px solid black">65,7dB</th>
+                        <th style="border: 1px solid black">115</th>
+                        <th style="border: 1px solid black">117,2</th>
+                        <th style="border: 1px solid black">65,7</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">Zei</th>
-                        <th style="border: 1px solid black">283ms</th>
-                        <th style="border: 1px solid black">98,96Hz</th>
-                        <th style="border: 1px solid black">70,23dB</th>
+                        <th style="border: 1px solid black">283</th>
+                        <th style="border: 1px solid black">98,96</th>
+                        <th style="border: 1px solid black">70,23</th>
                     </tr>
                     <tr>
                         <th style="border: 1px solid black">tung</th>
-                        <th style="border: 1px solid black">306ms</th>
-                        <th style="border: 1px solid black">103,7Hz</th>
-                        <th style="border: 1px solid black">60,56dB</th>
+                        <th style="border: 1px solid black">306</th>
+                        <th style="border: 1px solid black">103,7</th>
+                        <th style="border: 1px solid black">60,56</th>
                     </tr>
                 </table>
                 <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
