Auswertung angepasst und Dateipfad gefixt

--- a/ue5.html
+++ b/ue5.html
@@ -9,13 +9,13 @@
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:visited {
             font-family: Arial;
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:hover {
             color: #FF3333;
             text-decoration: none;
@@ -671,12 +671,16 @@
                 </table>
             </div>
             <p>
-                Vor der Auswertung ist anzumerken, das Schnitt und Segmentierung der Silben per Hand vorgenommen wurde und eine präzise Analyse daher nicht möglich ist. Zudem hängt die mittlere Intensität und zu Teilen auch die Grundfrequenz der Silben stark von deren
+                Vor der Auswertung ist anzumerken, das Schnitt und Segmentierung der Silben per Hand
+                vorgenommen wurde und eine präzise Analyse daher nicht möglich ist. Zudem hängt die
+                mittlere Intensität und auch die Grundfrequenzen der Silben stark von deren
                 Einteilung ab. Wir haben dennoch unser bestes versucht eine konsistente Segmentierung und Schnitt zu realisieren.
-                <br> Der Fokus spiegelt sich in den drei Eigenschaften Dauer, Grundfrequenz und Intensität der jeweiligen Wörter wieder. So ist gut erkennbar, wie in Fall 1 die Silbe Mann betont wird und somit lauter und länger gesprochen wird. Dieses
-                Muster zieht sich ebenfalls durch die anderen Fälle wobei anzumerken ist, das im Fall 4 "Der" stark betont ist. Bei Mark und Stefan ist "Mann" am stärksten betont, bei David "Zei". 
-                Das liegt vermutlich daran, dass der Satz neutral gesprochen werden sollte und jeder eine eigene Sprechweise hat.
-                <br> auf die Grundfrequenz hat der Fokus ebenfalls Einfluss, so tendieren betonte Wörter dazu auch eine höhere Grundfrequenz zu haben.
+                <br> Der Fokus spiegelt sich in den drei Eigenschaften Dauer, Grundfrequenz und Intensität
+                der jeweiligen Wörter wieder. So ist gut erkennbar, wie im Fall 1 die Silbe "Mann" betont wird
+                und somit lauter und länger gesprochen wird. Dieses
+                Muster zieht sich ebenfalls durch die anderen Fälle wobei anzumerken ist, das im Fall 3 anders als erwartet nur die Silbe "Zei" betont wird.
+                Mit "betont" ist generell gemeint, das im Vergleich zu den anderen Fällen die Silbe lauter und länger gesprochen wurde.
+                <br> Auf die Grundfrequenz hat der Fokus ebenfalls Einfluss, so tendieren betonte Silben dazu auch eine höhere Grundfrequenz zu haben.
             </p>
         </section>
     </article>
@@ -829,7 +833,7 @@
                     <th><audio controls><source src="./Uebung5/stefan/5_6/Was_passiert_da.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
-                    <th><img src="./Uebung5/david/5_6/Was_passier_da.JPG" width="400" height="200"></th>
+                    <th><img src="./Uebung5/david/5_6/was_passier_da.JPG" width="400" height="200"></th>
                     <th><img src="./Uebung5/marc/5_6/Was_passiert_da.png" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_6/Was_passiert_da.JPG" width="400" height="200"></th>
                 </tr>
